--- a/roullete ss.html
+++ b/roullete ss.html
@@ -139,24 +139,24 @@
         });
 
        const promoCodes = [
-    'A10B2C3D4', 'E05F6G7H8', 'I9J00K1L2', 'M3N4O05P6', 'Q7R80S9T0',
-    '0U1V2W3X4', 'Y05Z6A7B8', 'C9D0E01F2', 'G3H40I5J6', 'K70L8M9N0',
-    'O1P02Q3R4', 'S50T6U7V8', 'W9X0Y1Z20', 'A30B4C5D6', 'E70F8G9H0',
-    'I01J2K3L4', 'M5N60O7P8', 'Q9R00S1T2', 'U3V40W5X6', 'Y07Z8A9B0',
-    'C1D02E3F4', 'G5H6I07J8', 'K9L00M1N2', 'O3P4Q05R6', 'S7T08U9V0',
-    'W1X20Y3Z4', 'A5B06C7D8', 'E09F0G1H2', 'I03J4K5L6', 'M70N8O9P0',
-    'Q1R2S03T4', 'U5V06W7X8', 'Y9Z0A01B2', 'C30D4E5F6', 'G70H8I9J0',
-    'K1L20M3N4', 'O5P06Q7R8', 'S9T0U01V2', 'W3X04Y5Z6', 'A07B8C9D0',
-    'E10F2G3H4', 'I5J6K70L8', 'M9N00O1P2', 'Q3R40S5T6', 'U7V08W9X0',
-    'Y10Z2A3B4', 'C5D6E07F8', 'G90H0I1J2', 'K3L04M5N6', 'O07P8Q9R0',
-    'S1T02U3V4', 'W5X6Y07Z8', 'A9B00C1D2', 'E3F40G5H6', 'I07J8K9L0',
-    'M1N20O3P4', 'Q5R6S70T8', 'U90V0W1X2', 'Y3Z04A5B6', 'C70D8E9F0',
-    'G1H20I3J4', 'K5L60M7N8', 'O9P0Q01R2', 'S03T4U5V6', 'W07X8Y9Z0',
-    'A1B20C3D4', 'E50F6G7H8', 'I9J0K01L2', 'M3N40O5P6', 'Q7R08S9T0',
-    'U1V20W3X4', 'Y5Z6A7B08', 'C9D0E01F2', 'G30H4I5J6', 'K70L8M9N0',
-    'O1P2Q03R4', 'S5T6U70V8', 'W9X00Y1Z2', 'A30B4C5D6', 'E70F8G9H0',
-    'I1J2K03L4', 'M5N6O7P80', 'Q9R00S1T2', 'U3V4W50X6', 'Y70Z8A9B0',
-    'C1D20E3F4', 'G50H6I7J8', '0K9L0M1N2', 'O3P40Q5R6', '0S7T8U9V0'
+    'SYMB-A10B2C3D4', 'SYMB-E05F6G7H8', 'SYMB-I9J00K1L2', 'SYMB-M3N4O05P6', 'SYMB-Q7R80S9T0',
+    'SYMB-0U1V2W3X4', 'SYMB-Y05Z6A7B8', 'SYMB-C9D0E01F2', 'SYMB-G3H40I5J6', 'SYMB-K70L8M9N0',
+    'SYMB-O1P02Q3R4', 'SYMB-S50T6U7V8', 'SYMB-W9X0Y1Z20', 'SYMB-A30B4C5D6', 'SYMB-E70F8G9H0',
+    'SYMB-I01J2K3L4', 'SYMB-M5N60O7P8', 'SYMB-Q9R00S1T2', 'SYMB-U3V40W5X6', 'SYMB-Y07Z8A9B0',
+    'SYMB-C1D02E3F4', 'SYMB-G5H6I07J8', 'SYMB-K9L00M1N2', 'SYMB-O3P4Q05R6', 'SYMB-S7T08U9V0',
+    'SYMB-W1X20Y3Z4', 'SYMB-A5B06C7D8', 'SYMB-E09F0G1H2', 'SYMB-I03J4K5L6', 'SYMB-M70N8O9P0',
+    'SYMB-Q1R2S03T4', 'SYMB-U5V06W7X8', 'SYMB-Y9Z0A01B2', 'SYMB-C30D4E5F6', 'SYMB-G70H8I9J0',
+    'SYMB-K1L20M3N4', 'SYMB-O5P06Q7R8', 'SYMB-S9T0U01V2', 'SYMB-W3X04Y5Z6', 'SYMB-A07B8C9D0',
+    'SYMB-E10F2G3H4', 'SYMB-I5J6K70L8', 'SYMB-M9N00O1P2', 'SYMB-Q3R40S5T6', 'SYMB-U7V08W9X0',
+    'SYMB-Y10Z2A3B4', 'SYMB-C5D6E07F8', 'SYMB-G90H0I1J2', 'SYMB-K3L04M5N6', 'SYMB-O07P8Q9R0',
+    'SYMB-S1T02U3V4', 'SYMB-W5X6Y07Z8', 'SYMB-A9B00C1D2', 'SYMB-E3F40G5H6', 'SYMB-I07J8K9L0',
+    'SYMB-M1N20O3P4', 'SYMB-Q5R6S70T8', 'SYMB-U90V0W1X2', 'SYMB-Y3Z04A5B6', 'SYMB-C70D8E9F0',
+    'SYMB-G1H20I3J4', 'SYMB-K5L60M7N8', 'SYMB-O9P0Q01R2', 'SYMB-S03T4U5V6', 'SYMB-W07X8Y9Z0',
+    'SYMB-A1B20C3D4', 'SYMB-E50F6G7H8', 'SYMB-I9J0K01L2', 'SYMB-M3N40O5P6', 'SYMB-Q7R08S9T0',
+    'SYMB-U1V20W3X4', 'SYMB-Y5Z6A7B08', 'SYMB-C9D0E01F2', 'SYMB-G30H4I5J6', 'SYMB-K70L8M9N0',
+    'SYMB-O1P2Q03R4', 'SYMB-S5T6U70V8', 'SYMB-W9X00Y1Z2', 'SYMB-A30B4C5D6', 'SYMB-E70F8G9H0',
+    'SYMB-I1J2K03L4', 'SYMB-M5N6O7P80', 'SYMB-Q9R00S1T2', 'SYMB-U3V4W50X6', 'SYMB-Y70Z8A9B0',
+    'SYMB-C1D20E3F4', 'SYMB-G50H6I7J8', 'SYMB-0K9L0M1N2', 'SYMB-O3P40Q5R6', 'SYMB-0S7T8U9V0'
 ];
 
         function isPromoCodeUsed(code) {
